--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "parcel src/index.html",
         "dev:mock": "cross-env PET_MOCK=mock npm run dev",
         "format": "prettier \"src/**/*.{js,html}\" --write",
-        "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+        "lint": "tslint --project",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -18,16 +18,16 @@
         "@babel/plugin-proposal-class-properties": "^7.10.4",
         "@babel/preset-env": "^7.11.0",
         "@babel/preset-react": "^7.10.4",
-        "babel-eslint": "^10.1.0",
+        "@types/reach__router": "^1.3.5",
+        "@types/react": "^16.9.49",
+        "@types/react-dom": "^16.9.8",
         "cross-env": "^7.0.2",
-        "eslint": "^7.7.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
-        "eslint-plugin-react": "^7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
         "parcel-bundler": "^1.12.4",
-        "prettier": "^2.1.1"
+        "prettier": "^2.1.1",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
+        "tslint-react": "^5.0.0",
+        "typescript": "^4.0.2"
     },
     "dependencies": {
         "@frontendmasters/pet": "^1.0.3",
