--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
         "dev:mock": "cross-env PET_MOCK=mock npm run dev",
         "format": "prettier \"src/**/*.{js,html}\" --write",
         "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "test:update": "jest -u",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "keywords": [],
     "author": "",
@@ -26,12 +29,15 @@
         "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-react": "^7.20.6",
         "eslint-plugin-react-hooks": "^4.1.0",
+        "jest": "^26.4.2",
         "parcel-bundler": "^1.12.4",
-        "prettier": "^2.1.1"
+        "prettier": "^2.1.1",
+        "react-testing-library": "^8.0.1"
     },
     "dependencies": {
         "@frontendmasters/pet": "^1.0.3",
         "@reach/router": "^1.3.4",
+        "@testing-library/react": "^11.0.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
     },
